# storygen

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Dockerfile.prod  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_indexes.py
assets/: config.json.example
docs/plans/: 2026-03-11-low-ram-video-generation.md  2026-03-11-pre-production-sweep-design.md  2026-03-11-pre-production-sweep.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: AdminTable.test.tsx  BlockCard.test.tsx  CanvasPreview.test.tsx  ErrorBoundary.test.tsx  Modal.test.tsx  StatsBar.test.tsx  format.test.ts
frontend/src/api/: admin.ts  auth.ts  blocks.ts  client.ts  types.ts
frontend/src/components/: ErrorBoundary.tsx  Footer.tsx  Header.tsx  Modal.tsx
frontend/src/context/: AuthContext.tsx  VideoContext.tsx
frontend/src/features/actions/: ActionsBar.tsx
frontend/src/features/admin/: AdminTable.tsx  StatsBar.tsx
frontend/src/features/blocks/: BlockCard.tsx  BlockTabs.tsx  CanvasPreview.tsx
frontend/src/pages/: AdminPage.tsx  HomePage.tsx  LoginPage.tsx
frontend/src/styles/: admin.css  globals.css
frontend/src/utils/: format.ts
nginx/: storygen.conf
src/: generate.py
tests/: conftest.py  test_admin.py  test_auth_utils.py  test_blocks.py  test_email.py  test_generate.py  test_me.py  test_security.py  test_video.py
web/: auth.py  main.py
web/db/: engine.py  models.py
web/routers/: admin.py  auth.py
web/static/: admin.html  app.js  index.html  style.css
